# rock-n-roll-soul

./: .gitignore  CMakeLists.txt  DESIGN  README.md  SConstruct
VC++/: rocknroll.sln
VC++/Project1/: Project1.vcxproj  Project1.vcxproj.filters
VC++/SFML-1.6/lib/: sfml-audio-s-d.lib  sfml-audio-s.lib  sfml-main-d.lib  sfml-main.lib  sfml-network-s-d.lib  sfml-network-s.lib  sfml-system-s-d.lib  sfml-system-s.lib  sfml-window-s-d.lib  sfml-window-s.lib
assets/: 0.map  Guitar.xcf  aimer.anim  aimer.ase  aimer.xcf  background.ase  bird.anim  bird.xcf  bush.anim  bushbig.anim  divideicon.anim  goal.anim  goal.ase  grass_step.anim  grass_step.ase  grass_step.xcf  heart.anim  heart.ase  icon5.anim  instructions1.anim  instructions1.ase  instructions2.anim  instructions2.ase  level1.map  level2.map  mainmenu.anim  mainmenu.xcf  rocker.anim  rocker.ase  title.anim  title.ase  tuplet.anim  tuplet.ase
include/: animation.hpp  animdata.hpp  effect.hpp  entity.hpp  explosion.hpp  fader.hpp  gamemap.hpp  gamescene.hpp  goalflag.hpp  heart.hpp  mainapp.hpp  menulayout.hpp  menuscene.hpp  platform.hpp  player.hpp  playerstate.hpp  scene.hpp  sequencer.hpp  tween.hpp  util.hpp
level/: ascent.map  divide.map  hopskipjump.map  leaper.map  ski.map  smallsteps.map
menu/: mainmenu.menu
src/: animation.cpp  animdata.cpp  effect.cpp  entity.cpp  explosion.cpp  fader.cpp  gamemap.cpp  gamescene.cpp  heart.cpp  main.cpp  mainapp.cpp  menulayout.cpp  menuscene.cpp  platform.cpp  player.cpp  playerstate.cpp  scene.cpp  sequencer.cpp  tween.cpp  util.cpp
